<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loading"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/llBkg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:text="@string/app_name" />

        <LinearLayout
            android:id="@+id/llContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="60dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minWidth="250dp">

                <ImageView
                    android:id="@+id/ivContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_success"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:textColor="@android:color/white"
                    android:visibility="visible"
                    tools:text="@string/long_text" />

            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBtnGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnPositive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sel_def_gray_left"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="40dp"
            android:textColor="#676767"
            tools:text="@string/ok" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:id="@+id/divider"
                android:layout_width="1px"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="#929292" />

        </LinearLayout>

        <TextView
            android:id="@+id/btnNegative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sel_def_gray_right"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="40dp"
            android:textColor="#676767"
            tools:text="@string/cancel" />

    </LinearLayout>
</LinearLayout>
